[package]
name = "laser-utils-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
# config = "0.11.0"
# confy = "0.4.0"
# use master 
confy = { git = "https://github.com/rust-cli/confy" }
env_logger = "0.9.0"
# figment = { version = "0.10.6", features = ["toml", "env"] }
log = "0.4.14"
rand = "0.8.4"
reqwest = "0.11.8"
serde = { version = "1.0.133", features = ["derive"] }
serialport = "4.0.1"
